--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ CONFLUENCE_API_KEY=CONFLUENCE_API_KEY
 CONTACT_USER_NAME=CONTACT_USER_NAME
 CONTACT_PHONE_NUMBER=CONTACT_PHONE_NUMBER
 CONTACT_EMAIL=CONTACT_EMAIL
+ACCOUNT_ID_LIST=ACCOUNT_ID_LIST
