Setup send mail

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ CONTACT_USER_NAME=CONTACT_USER_NAME
 CONTACT_PHONE_NUMBER=CONTACT_PHONE_NUMBER
 CONTACT_EMAIL=CONTACT_EMAIL
 ACCOUNT_ID_LIST=ACCOUNT_ID_LIST
+MAIL_DOMAIN=MAIL_DOMAIN
+MAIL_USER_NAME=MAIL_USER_NAME
+MAIL_PASSS=MAIL_PASSS
